# materialize

./: deny.toml
demo/billing/: Cargo.toml
demo/billing/src/: main.rs
play/json-flattened-view-gen/: Cargo.toml
play/mbta/: Cargo.toml
play/mbta/src/: main.rs
src/coordtest/: Cargo.toml
src/dataflow-bin/: Cargo.toml
src/dataflow-types/src/: types.rs
src/dataflow/src/decode/: protobuf.rs
src/interchange/: Cargo.toml
src/interchange/benches/: protobuf.rs
src/interchange/src/: protobuf.rs
src/interchange/src/protobuf/: decode.rs
src/kafka-util/: Cargo.toml
src/materialized/: Cargo.toml
src/mzcloud-cli/: Cargo.toml
src/ore/: Cargo.toml
src/peeker/: Cargo.toml
src/peeker/src/: args.rs  main.rs
src/pgtest/: Cargo.toml
src/protoc/: Cargo.toml
src/sql/: Cargo.toml
src/sqllogictest/: Cargo.toml
src/testdrive/: Cargo.toml  build.rs
src/testdrive/src/: main.rs
src/testdrive/src/format/protobuf/: bad.proto
test/chaos/: Cargo.toml
test/chaos/src/: main.rs
test/correctness/: Cargo.toml
test/performance/perf-kinesis/: Cargo.toml
test/performance/perf-kinesis/src/: main.rs
test/performance/perf-upsert/: Cargo.toml
test/performance/perf-upsert/src/: config.rs  main.rs
test/performance/s3-datagen/: Cargo.toml
test/performance/s3-datagen/src/: main.rs
test/testdrive/: proto-billing.td  protobuf.td
