[package]
name = "dataflow-bin"
description = "Utility binaries for the dataflow crate."
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
ore = { path = "../ore" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false, features = ["bincode"] }
