[package]
name = "mzcloud-cli"
description = "Command-line tool for interacting with Materialize Cloud."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { git = "https://github.com/clap-rs/clap" }
mzcloud = { git = "https://github.com/MaterializeInc/cloud-sdks" }
reqwest = "0.11"
ore = { path = "../ore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
