[package]
name = "protoc"
description = "A pure Rust protobuf compiler."
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "protoc"
path = "bin/protoc.rs"

[dependencies]
anyhow = "1.0.44"
clap = { git = "https://github.com/clap-rs/clap" }
ore = { path = "../ore" }
protobuf = "2.23.0"
protobuf-codegen = "2.23.0"
protobuf-codegen-pure = "2.23.0"
tempfile = "3.2.0"
